--- a/public/templates/pages/fungi_detail.twig
+++ b/public/templates/pages/fungi_detail.twig
@@ -78,7 +78,7 @@
             <nav aria-label="breadcrumb" class="mb-4">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/" class="text-decoration-none"><i class="fas fa-home"></i> Inicio</a></li>
-                    <li class="breadcrumb-item"><a href="/fungi" class="text-decoration-none">Hongos</a></li>
+                    <li class="breadcrumb-item"><a href="/fungi/random" class="text-decoration-none">Hongos</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ fungi.name|replace({'-': ' '}) }}</li>
                 </ol>
             </nav>
