--- a/public/templates/components/navbar.twig
+++ b/public/templates/components/navbar.twig
@@ -53,8 +53,8 @@
                         <a class="dropdown-item" href="/profile">
                             <i class="fas fa-id-card"></i> {{ __d('Mi Perfil', 'navbar') }}
                         </a>
-                        <li id="admin-option" class="d-none">
-                            <a class="dropdown-item" href="/admin">
+                        <li id="admin-option" class="nav-item">
+                            <a class="dropdown-item" href="/dashboard">
                                 <i class="fas fa-cogs"></i> {{ __d('Administración', 'navbar') }}
                             </a>
                         </li>
